# barulho

./: .hgignore  CLAUDE.md  PLAN.md  README.md  REQUIREMENTS.md  barulho.desktop  build-deb.sh  install.sh  pyproject.toml  run.py  run.sh
barulho/: __init__.py  audio_player.py  config.py  main.py  mapping_list.py  mapping_row.py  midi_handler.py  midi_log.py  window.py
